--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>hlounh Profile</title>
+  <title>Hoàng Trọng Lương Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -205,7 +205,7 @@
       <div class="flex items-center space-x-1.5">
       </div>
       <div class="flex items-center space-x-4">
-        <p class="text-sm text-[var(--accent-color)]">Zero One</p>
+        <p class="text-sm text-[var(--accent-color)]">Yêu béo</p>
         <div id="clock" class="text-sm text-[var(--secondary-color)]"></div>
       </div>
     </div>
@@ -216,7 +216,7 @@
           <div class="w-48 h-48 rounded-full p-1 border-2 border-dashed border-[var(--accent-color)] glow-box">
             <img src="https://i.pinimg.com/1200x/40/68/54/40685427a5ee1ef5dd564a3b900eb30e.jpg" alt="Avatar" class="w-full h-full rounded-full object-cover" />
           </div>
-          <h1 class="font-game text-3xl text-center glow-text typing-effect">hlounh</h1>
+          <h1 class="font-game text-3xl text-center glow-text typing-effect">Hoàng Trọng Lương</h1>
           <div class="w-full p-4 border border-[var(--border-color)] rounded-md hover-effect">
             <h2 class="font-game text-lg text-[var(--secondary-color)] mb-2">STATS</h2>
             <ul class="space-y-1 text-sm">
@@ -242,7 +242,7 @@
               <h2 class="font-bold text-lg text-[var(--secondary-color)] mb-3">YÊU THÍCH</h2>
               <div class="space-y-4">
                 <div class="flex items-center space-x-4">
-                  <img src="https://i.pinimg.com/736x/fd/ec/bd/fdecbda8f55316280562ae1f7d5e1b5c.jpg" alt="Minecraft" class="w-16 h-16 rounded-md border border-[var(--border-color)]" />
+                  <img src="https://i.pinimg.com/736x/4d/b7/e8/4db7e8ab2db37421bde7fca86523d694.jpg" alt="Minecraft" class="w-16 h-16 rounded-md border border-[var(--border-color)]" />
                   <div>
                     <h3 class="font-bold">Minecraft</h3>
                     <p class="text-sm text-[var(--accent-color)]">Better</p>
