--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- Header -->
     <div class="flex justify-between items-center mb-6">
-      <span class="exe-title">PROFILE.EXE</span>
+      <span class="exe-title">I Love You</span>
       <span id="clock" class="exe-title"></span>
     </div>
 
