--- a/index.html
+++ b/index.html
@@ -29,70 +29,57 @@
         linear-gradient(var(--grid) 1px, transparent 1px),
         linear-gradient(90deg, var(--grid) 1px, transparent 1px);
       background-size: 16px 16px;
-      overflow: hidden;
+      overflow-y: auto;
     }
 
-    /* Window */
     .os-window {
       background: var(--card);
       border: 4px solid var(--border);
-      box-shadow: 8px 8px 0 var(--gray);
+      box-shadow: 6px 6px 0 var(--gray);
     }
 
-    /* Header text */
     .exe-title {
       font-family: "VT323", monospace;
-      font-size: 22px;
+      font-size: 20px;
       letter-spacing: 1px;
     }
 
-    /* Avatar */
     .avatar {
-      width: 160px;
-      height: 160px;
+      width: 140px;
+      height: 140px;
       object-fit: cover;
       border: 4px solid var(--border);
       image-rendering: pixelated;
       filter: grayscale(10%) contrast(105%);
     }
 
-    /* Name */
     .name-box {
       font-family: "VT323", monospace;
-      font-size: 34px;
+      font-size: 30px;
       letter-spacing: 2px;
       background: #e0e0e0;
       border: 3px solid var(--border);
       box-shadow: 4px 4px 0 var(--gray);
-      padding: 6px 16px;
+      padding: 6px 14px;
       text-align: center;
-      animation: pop 0.4s ease-out;
     }
 
-    @keyframes pop {
-      from { transform: scale(0.95); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-
-    /* Cards */
     .pixel-card {
       background: var(--card);
       border: 3px solid var(--border);
       box-shadow: 4px 4px 0 var(--gray);
-      padding: 16px;
+      padding: 14px;
     }
 
-    /* Tags */
     .tag {
       font-family: "VT323", monospace;
-      font-size: 18px;
-      padding: 4px 10px;
+      font-size: 16px;
+      padding: 4px 8px;
       background: #e0e0e0;
       border: 2px solid var(--border);
       box-shadow: 2px 2px 0 var(--gray);
     }
 
-    /* Skill bar */
     .skill-bar {
       height: 10px;
       border: 2px solid var(--border);
@@ -103,24 +90,45 @@
       height: 100%;
       background: var(--border);
     }
+
+    @media (max-width: 640px) {
+      .avatar {
+        width: 110px;
+        height: 110px;
+      }
+
+      .name-box {
+        font-size: 24px;
+        padding: 6px 10px;
+      }
+
+      .exe-title {
+        font-size: 18px;
+      }
+
+      .pixel-card {
+        padding: 12px;
+        box-shadow: 3px 3px 0 var(--gray);
+      }
+    }
   </style>
 </head>
 
-<body class="flex items-center justify-center min-h-screen p-4">
+<body class="flex items-start justify-center min-h-screen p-3">
 
-  <div class="os-window w-full max-w-5xl p-6">
+  <div class="os-window w-full max-w-4xl p-4">
 
     <!-- Header -->
-    <div class="flex justify-between items-center mb-6">
-      <span class="exe-title">I Love You</span>
+    <div class="flex justify-between items-center mb-4">
+      <span class="exe-title">PROFILE.EXE</span>
       <span id="clock" class="exe-title"></span>
     </div>
 
     <!-- Content -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
 
       <!-- Left -->
-      <div class="flex flex-col items-center gap-4">
+      <div class="flex flex-col items-center gap-3">
         <img
           src="https://i.pinimg.com/736x/4d/b7/e8/4db7e8ab2db37421bde7fca86523d694.jpg"
           class="avatar"
@@ -139,11 +147,10 @@
       </div>
 
       <!-- Right -->
-      <div class="md:col-span-2 space-y-6">
+      <div class="md:col-span-2 space-y-4">
 
-        <!-- Hobbies -->
         <div class="pixel-card">
-          <h2 class="exe-title mb-3">SỞ THÍCH</h2>
+          <h2 class="exe-title mb-2">SỞ THÍCH</h2>
           <div class="flex gap-2 flex-wrap">
             <span class="tag">GAME</span>
             <span class="tag">CODE</span>
@@ -151,11 +158,10 @@
           </div>
         </div>
 
-        <div class="grid md:grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
 
-          <!-- Favorites -->
-          <div class="pixel-card">
-            <h2 class="exe-title mb-4">YÊU THÍCH</h2>
+          <div class="pixel-card md:col-span-1">
+            <h2 class="exe-title mb-3">YÊU THÍCH</h2>
 
             <p class="text-sm mb-1">Minecraft</p>
             <div class="skill-bar mb-3">
@@ -168,28 +174,37 @@
             </div>
           </div>
 
-          <!-- Skills -->
-          <div class="pixel-card">
-            <h2 class="exe-title mb-4">KỸ NĂNG</h2>
+          <div class="pixel-card md:col-span-2">
+            <h2 class="exe-title mb-3">KỸ NĂNG</h2>
 
-            <p class="text-sm mb-1">HTML / CSS – 80%</p>
-            <div class="skill-bar mb-3">
-              <div class="skill-fill" style="width:80%"></div>
-            </div>
+            <div class="space-y-3">
+              <div>
+                <p class="text-sm">HTML / CSS – 80%</p>
+                <div class="skill-bar">
+                  <div class="skill-fill" style="width:80%"></div>
+                </div>
+              </div>
 
-            <p class="text-sm mb-1">JavaScript – 15%</p>
-            <div class="skill-bar mb-3">
-              <div class="skill-fill" style="width:15%"></div>
-            </div>
+              <div>
+                <p class="text-sm">JavaScript – 15%</p>
+                <div class="skill-bar">
+                  <div class="skill-fill" style="width:15%"></div>
+                </div>
+              </div>
 
-            <p class="text-sm mb-1">Thiết kế – 25%</p>
-            <div class="skill-bar mb-3">
-              <div class="skill-fill" style="width:25%"></div>
-            </div>
+              <div>
+                <p class="text-sm">Thiết kế – 25%</p>
+                <div class="skill-bar">
+                  <div class="skill-fill" style="width:25%"></div>
+                </div>
+              </div>
 
-            <p class="text-sm mb-1">Game Dev – 10%</p>
-            <div class="skill-bar">
-              <div class="skill-fill" style="width:10%"></div>
+              <div>
+                <p class="text-sm">Game Dev – 10%</p>
+                <div class="skill-bar">
+                  <div class="skill-fill" style="width:10%"></div>
+                </div>
+              </div>
             </div>
           </div>
 
