--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- Header -->
     <div class="flex justify-between items-center mb-4">
-      <span class="exe-title">PROFILE.EXE</span>
+      <span class="exe-title">Tôi Yêu Em </span>
       <span id="clock" class="exe-title"></span>
     </div>
 
